# brp-web

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  package-lock.json  package.json  tailwind.config.js
assets/: datepicker.min.js  tailwind.css
migrations/: 20240404132626_create-user-db.sql  20240409135223_add_brp.sql
src/: auth.rs  errors.rs  lib.rs  main.rs  utils.rs
src/brp/: books.rs  content.rs  mod.rs  model.rs
src/view/: hx.rs  mod.rs
src/view/pages/: index.rs  login.rs  mod.rs
src/view/ui/: button.rs  datepicker.rs  input.rs  mod.rs  modal.rs  theme_toggle.rs  toast.rs
